parser.output
Nonterminals useless in grammar

   ident_list


Rules useless in grammar

  117 ident_list: %empty
  118           | IDENT
  119           | ident_list COMMA
  120           | ident_list IDENT


State 10 conflicts: 19 shift/reduce
State 11 conflicts: 19 shift/reduce
State 12 conflicts: 19 shift/reduce
State 21 conflicts: 2 shift/reduce
State 24 conflicts: 19 shift/reduce
State 27 conflicts: 1 shift/reduce
State 33 conflicts: 1 shift/reduce
State 34 conflicts: 1 shift/reduce
State 40 conflicts: 1 shift/reduce
State 57 conflicts: 1 shift/reduce
State 58 conflicts: 1 shift/reduce
State 59 conflicts: 1 shift/reduce
State 71 conflicts: 22 reduce/reduce
State 72 conflicts: 4 reduce/reduce
State 77 conflicts: 1 shift/reduce
State 79 conflicts: 22 reduce/reduce
State 103 conflicts: 19 shift/reduce
State 123 conflicts: 2 shift/reduce
State 124 conflicts: 2 shift/reduce
State 125 conflicts: 2 shift/reduce
State 126 conflicts: 2 shift/reduce
State 127 conflicts: 2 shift/reduce
State 128 conflicts: 2 shift/reduce
State 129 conflicts: 2 shift/reduce
State 130 conflicts: 2 shift/reduce
State 131 conflicts: 2 shift/reduce
State 139 conflicts: 1 shift/reduce
State 142 conflicts: 4 reduce/reduce
State 143 conflicts: 4 reduce/reduce
State 144 conflicts: 1 shift/reduce, 12 reduce/reduce
State 145 conflicts: 1 shift/reduce, 12 reduce/reduce
State 146 conflicts: 4 reduce/reduce
State 147 conflicts: 4 reduce/reduce
State 148 conflicts: 4 reduce/reduce
State 149 conflicts: 4 reduce/reduce
State 150 conflicts: 4 reduce/reduce
State 151 conflicts: 4 reduce/reduce
State 152 conflicts: 15 reduce/reduce
State 153 conflicts: 15 reduce/reduce
State 154 conflicts: 15 reduce/reduce
State 155 conflicts: 15 reduce/reduce
State 156 conflicts: 6 shift/reduce, 16 reduce/reduce
State 157 conflicts: 6 shift/reduce, 16 reduce/reduce
State 158 conflicts: 6 shift/reduce, 16 reduce/reduce
State 159 conflicts: 6 shift/reduce, 16 reduce/reduce
State 160 conflicts: 6 shift/reduce, 16 reduce/reduce
State 161 conflicts: 1 shift/reduce, 15 reduce/reduce
State 164 conflicts: 2 shift/reduce
State 165 conflicts: 2 shift/reduce
State 166 conflicts: 2 shift/reduce
State 167 conflicts: 2 shift/reduce
State 168 conflicts: 2 shift/reduce
State 169 conflicts: 2 shift/reduce
State 170 conflicts: 2 shift/reduce
State 171 conflicts: 2 shift/reduce
State 172 conflicts: 2 shift/reduce
State 185 conflicts: 1 shift/reduce
State 189 conflicts: 19 shift/reduce
State 212 conflicts: 1 shift/reduce
State 217 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: stmt_list

    2 stmt_list: stmt_list stmt
    3          | %empty

    4 stmt: expr
    5     | RETURN expr
    6     | RETURN
    7     | BREAK
    8     | BREAK expr
    9     | CONTINUE
   10     | CONTINUE expr
   11     | stmt SEMICOLON

   12 expr: control_expr

   13 control_expr: IF expr THEN stmt_list if_termin
   14             | WHILE expr DO stmt_list END
   15             | FOR IDENT IN expr DO stmt_list END
   16             | assign_expr

   17 if_termin: ELSEIF expr THEN stmt_list if_termin
   18          | ELSE stmt_list END
   19          | END

   20 assign_expr: IDENT ASSIGN expr
   21            | IDENT ASSIGNPLUS expr
   22            | IDENT ASSIGNMINUS expr
   23            | IDENT ASSIGNSTAR expr
   24            | IDENT ASSIGNSLASH expr
   25            | IDENT ASSIGNDSTAR expr
   26            | IDENT ASSIGNBAND expr
   27            | IDENT ASSIGNBOR expr
   28            | IDENT ASSIGNBXOR expr
   29            | ex_index_expr ASSIGN expr
   30            | ex_index_expr ASSIGNPLUS expr
   31            | ex_index_expr ASSIGNMINUS expr
   32            | ex_index_expr ASSIGNSTAR expr
   33            | ex_index_expr ASSIGNSLASH expr
   34            | ex_index_expr ASSIGNDSTAR expr
   35            | ex_index_expr ASSIGNBAND expr
   36            | ex_index_expr ASSIGNBOR expr
   37            | ex_index_expr ASSIGNBXOR expr
   38            | logic_expr

   39 logic_expr: logic_expr LAND ulogic_expr
   40           | logic_expr LOR ulogic_expr
   41           | ulogic_expr

   42 ulogic_expr: LNOT ulogic_expr
   43            | rel_expr

   44 rel_expr: term_expr EQUAL rel_expr
   45         | term_expr NEQUAL rel_expr
   46         | term_expr LESS rel_expr
   47         | term_expr GREATER rel_expr
   48         | term_expr LESSEQ rel_expr
   49         | term_expr GREATEREQ rel_expr
   50         | term_expr

   51 term_expr: term_expr PLUS factor_expr
   52          | term_expr MINUS factor_expr
   53          | factor_expr

   54 factor_expr: factor_expr STAR power_expr
   55            | factor_expr SLASH power_expr
   56            | factor_expr PERCENT power_expr
   57            | power_expr

   58 power_expr: tbang_expr DSTAR power_expr
   59           | tbang_expr

   60 tbang_expr: binary_expr TBANG tbang_expr
   61           | binary_expr

   62 binary_expr: binary_expr BAND binary_expr
   63            | binary_expr BOR binary_expr
   64            | binary_expr BXOR binary_expr
   65            | binary_expr LSHIFT binary_expr
   66            | binary_expr RSHIFT binary_expr
   67            | ubinary_expr

   68 ubinary_expr: BNOT ubinary_expr
   69             | ulen_expr

   70 ulen_expr: POUND ulen_expr
   71          | call_expr

   72 call_expr: call_expr LPAREN expr_list RPAREN
   73          | call_expr COLON IDENT LPAREN expr_list RPAREN
   74          | funcdecl_expr

   75 funcdecl_expr: FUNC IDENT any_lparen param_list RPAREN maybe_anno stmt_list END
   76              | FUNC any_lparen param_list RPAREN maybe_anno stmt_list END
   77              | MACRO IDENT any_lparen param_list RPAREN maybe_anno stmt_list END
   78              | MACRO any_lparen param_list RPAREN maybe_anno stmt_list END
   79              | LAMBDA any_lparen param_list RPAREN maybe_anno expr END
   80              | index_expr

   81 index_expr: expr LBRACKET expr RBRACKET
   82           | expr DOT IDENT
   83           | ref_expr

   84 ex_index_expr: expr LBRACKET expr RBRACKET
   85              | expr DOT IDENT

   86 ref_expr: IDENT
   87         | lit_expr

   88 lit_expr: INT
   89         | MINUS INT
   90         | FLOAT
   91         | STRING
   92         | NONE
   93         | gen_expr

   94 gen_expr: LBRACKET expr_list RBRACKET
   95         | LBRACE assoc_list RBRACE
   96         | paren_expr

   97 paren_expr: any_lparen expr RPAREN

   98 expr_list: %empty
   99          | expr
  100          | expr_list COMMA
  101          | expr_list expr

  102 param_list: %empty
  103           | param_list IDENT ASSIGN expr
  104           | param_list STAR IDENT
  105           | param_list IDENT maybe_anno
  106           | param_list COMMA

  107 assoc_list: %empty
  108           | assoc_item
  109           | assoc_list COMMA
  110           | assoc_list assoc_item

  111 assoc_item: LBRACKET expr RBRACKET ASSIGN expr
  112           | IDENT ASSIGN expr

  113 any_lparen: LPAREN
  114           | BLPAREN

  115 maybe_anno: COLON expr
  116           | %empty


Terminals, with rules where they appear

$end (0) 0
error (256)
IF (258) 13
THEN (259) 13 17
ELSEIF (260) 17
ELSE (261) 18
WHILE (262) 14
FOR (263) 15
IN (264) 15
DO (265) 14 15
FUNC (266) 75 76
MACRO (267) 77 78
LAMBDA (268) 79
RETURN (269) 5 6
BREAK (270) 7 8
CONTINUE (271) 9 10
END (272) 14 15 18 19 75 76 77 78 79
NONE (273) 92
IDENT (274) 15 20 21 22 23 24 25 26 27 28 73 75 77 82 85 86 103 104
    105 112
INT (275) 88 89
FLOAT (276) 90
STRING (277) 91
PLUS (278) 51
MINUS (279) 52 89
STAR (280) 54 104
SLASH (281) 55
PERCENT (282) 56
DSTAR (283) 58
BAND (284) 62
BOR (285) 63
BXOR (286) 64
BNOT (287) 68
LAND (288) 39
LOR (289) 40
LNOT (290) 42
ASSIGN (291) 20 29 103 111 112
ASSIGNPLUS (292) 21 30
ASSIGNMINUS (293) 22 31
ASSIGNSTAR (294) 23 32
ASSIGNSLASH (295) 24 33
ASSIGNDSTAR (296) 25 34
ASSIGNBAND (297) 26 35
ASSIGNBOR (298) 27 36
ASSIGNBXOR (299) 28 37
EQUAL (300) 44
NEQUAL (301) 45
LESS (302) 46
GREATER (303) 47
LESSEQ (304) 48
GREATEREQ (305) 49
RSHIFT (306) 66
LSHIFT (307) 65
LBRACE (308) 95
RBRACE (309) 95
BLPAREN (310) 114
LPAREN (311) 72 73 113
RPAREN (312) 72 73 75 76 77 78 79 97
LBRACKET (313) 81 84 94 111
RBRACKET (314) 81 84 94 111
DOT (315) 82 85
COLON (316) 73 115
SEMICOLON (317) 11
COMMA (318) 100 106 109
POUND (319) 70
TBANG (320) 60


Nonterminals, with rules where they appear

$accept (66)
    on left: 0
program (67)
    on left: 1, on right: 0
stmt_list (68)
    on left: 2 3, on right: 1 2 13 14 15 17 18 75 76 77 78
stmt (69)
    on left: 4 5 6 7 8 9 10 11, on right: 2 11
expr (70)
    on left: 12, on right: 4 5 8 10 13 14 15 17 20 21 22 23 24 25 26
    27 28 29 30 31 32 33 34 35 36 37 79 81 82 84 85 97 99 101 103 111
    112 115
control_expr (71)
    on left: 13 14 15 16, on right: 12
if_termin (72)
    on left: 17 18 19, on right: 13 17
assign_expr (73)
    on left: 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37
    38, on right: 16
logic_expr (74)
    on left: 39 40 41, on right: 38 39 40
ulogic_expr (75)
    on left: 42 43, on right: 39 40 41 42
rel_expr (76)
    on left: 44 45 46 47 48 49 50, on right: 43 44 45 46 47 48 49
term_expr (77)
    on left: 51 52 53, on right: 44 45 46 47 48 49 50 51 52
factor_expr (78)
    on left: 54 55 56 57, on right: 51 52 53 54 55 56
power_expr (79)
    on left: 58 59, on right: 54 55 56 57 58
tbang_expr (80)
    on left: 60 61, on right: 58 59 60
binary_expr (81)
    on left: 62 63 64 65 66 67, on right: 60 61 62 63 64 65 66
ubinary_expr (82)
    on left: 68 69, on right: 67 68
ulen_expr (83)
    on left: 70 71, on right: 69 70
call_expr (84)
    on left: 72 73 74, on right: 71 72 73
funcdecl_expr (85)
    on left: 75 76 77 78 79 80, on right: 74
index_expr (86)
    on left: 81 82 83, on right: 80
ex_index_expr (87)
    on left: 84 85, on right: 29 30 31 32 33 34 35 36 37
ref_expr (88)
    on left: 86 87, on right: 83
lit_expr (89)
    on left: 88 89 90 91 92 93, on right: 87
gen_expr (90)
    on left: 94 95 96, on right: 93
paren_expr (91)
    on left: 97, on right: 96
expr_list (92)
    on left: 98 99 100 101, on right: 72 73 94 100 101
param_list (93)
    on left: 102 103 104 105 106, on right: 75 76 77 78 79 103 104
    105 106
assoc_list (94)
    on left: 107 108 109 110, on right: 95 109 110
assoc_item (95)
    on left: 111 112, on right: 108 110
any_lparen (96)
    on left: 113 114, on right: 75 76 77 78 79 97
maybe_anno (97)
    on left: 115 116, on right: 75 76 77 78 79 105


State 0

    0 $accept: . program $end
    1 program: . stmt_list
    2 stmt_list: . stmt_list stmt
    3          | . %empty

    $default  reduce using rule 3 (stmt_list)

    program    go to state 1
    stmt_list  go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: stmt_list .  [$end]
    2 stmt_list: stmt_list . stmt
    4 stmt: . expr
    5     | . RETURN expr
    6     | . RETURN
    7     | . BREAK
    8     | . BREAK expr
    9     | . CONTINUE
   10     | . CONTINUE expr
   11     | . stmt SEMICOLON
   12 expr: . control_expr
   13 control_expr: . IF expr THEN stmt_list if_termin
   14             | . WHILE expr DO stmt_list END
   15             | . FOR IDENT IN expr DO stmt_list END
   16             | . assign_expr
   20 assign_expr: . IDENT ASSIGN expr
   21            | . IDENT ASSIGNPLUS expr
   22            | . IDENT ASSIGNMINUS expr
   23            | . IDENT ASSIGNSTAR expr
   24            | . IDENT ASSIGNSLASH expr
   25            | . IDENT ASSIGNDSTAR expr
   26            | . IDENT ASSIGNBAND expr
   27            | . IDENT ASSIGNBOR expr
   28            | . IDENT ASSIGNBXOR expr
   29            | . ex_index_expr ASSIGN expr
   30            | . ex_index_expr ASSIGNPLUS expr
   31            | . ex_index_expr ASSIGNMINUS expr
   32            | . ex_index_expr ASSIGNSTAR expr
   33            | . ex_index_expr ASSIGNSLASH expr
   34            | . ex_index_expr ASSIGNDSTAR expr
   35            | . ex_index_expr ASSIGNBAND expr
   36            | . ex_index_expr ASSIGNBOR expr
   37            | . ex_index_expr ASSIGNBXOR expr
   38            | . logic_expr
   39 logic_expr: . logic_expr LAND ulogic_expr
   40           | . logic_expr LOR ulogic_expr
   41           | . ulogic_expr
   42 ulogic_expr: . LNOT ulogic_expr
   43            | . rel_expr
   44 rel_expr: . term_expr EQUAL rel_expr
   45         | . term_expr NEQUAL rel_expr
   46         | . term_expr LESS rel_expr
   47         | . term_expr GREATER rel_expr
   48         | . term_expr LESSEQ rel_expr
   49         | . term_expr GREATEREQ rel_expr
   50         | . term_expr
   51 term_expr: . term_expr PLUS factor_expr
   52          | . term_expr MINUS factor_expr
   53          | . factor_expr
   54 factor_expr: . factor_expr STAR power_expr
   55            | . factor_expr SLASH power_expr
   56            | . factor_expr PERCENT power_expr
   57            | . power_expr
   58 power_expr: . tbang_expr DSTAR power_expr
   59           | . tbang_expr
   60 tbang_expr: . binary_expr TBANG tbang_expr
   61           | . binary_expr
   62 binary_expr: . binary_expr BAND binary_expr
   63            | . binary_expr BOR binary_expr
   64            | . binary_expr BXOR binary_expr
   65            | . binary_expr LSHIFT binary_expr
   66            | . binary_expr RSHIFT binary_expr
   67            | . ubinary_expr
   68 ubinary_expr: . BNOT ubinary_expr
   69             | . ulen_expr
   70 ulen_expr: . POUND ulen_expr
   71          | . call_expr
   72 call_expr: . call_expr LPAREN expr_list RPAREN
   73          | . call_expr COLON IDENT LPAREN expr_list RPAREN
   74          | . funcdecl_expr
   75 funcdecl_expr: . FUNC IDENT any_lparen param_list RPAREN maybe_anno stmt_list END
   76              | . FUNC any_lparen param_list RPAREN maybe_anno stmt_list END
   77              | . MACRO IDENT any_lparen param_list RPAREN maybe_anno stmt_list END
   78              | . MACRO any_lparen param_list RPAREN maybe_anno stmt_list END
   79              | . LAMBDA any_lparen param_list RPAREN maybe_anno expr END
   80              | . index_expr
   81 index_expr: . expr LBRACKET expr RBRACKET
   82           | . expr DOT IDENT
   83           | . ref_expr
   84 ex_index_expr: . expr LBRACKET expr RBRACKET
   85              | . expr DOT IDENT
   86 ref_expr: . IDENT
   87         | . lit_expr
   88 lit_expr: . INT
   89         | . MINUS INT
   90         | . FLOAT
   91         | . STRING
   92         | . NONE
   93         | . gen_expr
   94 gen_expr: . LBRACKET expr_list RBRACKET
   95         | . LBRACE assoc_list RBRACE
   96         | . paren_expr
   97 paren_expr: . any_lparen expr RPAREN
  113 any_lparen: . LPAREN
  114           | . BLPAREN

    IF        shift, and go to state 4
    WHILE     shift, and go to state 5
    FOR       shift, and go to state 6
    FUNC      shift, and go to state 7
    MACRO     shift, and go to state 8
    LAMBDA    shift, and go to state 9
    RETURN    shift, and go to state 10
    BREAK     shift, and go to state 11
    CONTINUE  shift, and go to state 12
    NONE      shift, and go to state 13
    IDENT     shift, and go to state 14
    INT       shift, and go to state 15
    FLOAT     shift, and go to state 16
    STRING    shift, and go to state 17
    MINUS     shift, and go to state 18
    BNOT      shift, and go to state 19
    LNOT      shift, and go to state 20
    LBRACE    shift, and go to state 21
    BLPAREN   shift, and go to state 22
    LPAREN    shift, and go to state 23
    LBRACKET  shift, and go to state 24
    POUND     shift, and go to state 25

    $default  reduce using rule 1 (program)

    stmt           go to state 26
    expr           go to state 27
    control_expr   go to state 28
    assign_expr    go to state 29
    logic_expr     go to state 30
    ulogic_expr    go to state 31
    rel_expr       go to state 32
    term_expr      go to state 33
    factor_expr    go to state 34
    power_expr     go to state 35
    tbang_expr     go to state 36
    binary_expr    go to state 37
    ubinary_expr   go to state 38
    ulen_expr      go to state 39
    call_expr      go to state 40
    funcdecl_expr  go to state 41
    index_expr     go to state 42
    ex_index_expr  go to state 43
    ref_expr       go to state 44
    lit_expr       go to state 45
    gen_expr       go to state 46
    paren_expr     go to state 47
    any_lparen     go to state 48


State 3

    0 $accept: program $end .

    $default  accept


State 4

   12 expr: . control_expr
   13 control_expr: . IF expr THEN stmt_list if_termin
   13             | IF . expr THEN stmt_list if_termin
   14             | . WHILE expr DO stmt_list END
   15             | . FOR IDENT IN expr DO stmt_list END
   16             | . assign_expr
   20 assign_expr: . IDENT ASSIGN expr
   21            | . IDENT ASSIGNPLUS expr
   22            | . IDENT ASSIGNMINUS expr
   23            | . IDENT ASSIGNSTAR expr
   24            | . IDENT ASSIGNSLASH expr
   25            | . IDENT ASSIGNDSTAR expr
   26            | . IDENT ASSIGNBAND expr
   27            | . IDENT ASSIGNBOR expr
   28            | . IDENT ASSIGNBXOR expr
   29            | . ex_index_expr ASSIGN expr
   30            | . ex_index_expr ASSIGNPLUS expr
   31            | . ex_index_expr ASSIGNMINUS expr
   32            | . ex_index_expr ASSIGNSTAR expr
   33            | . ex_index_expr ASSIGNSLASH expr
   34            | . ex_index_expr ASSIGNDSTAR expr
   35            | . ex_index_expr ASSIGNBAND expr
   36            | . ex_index_expr ASSIGNBOR expr
   37            | . ex_index_expr ASSIGNBXOR expr
   38            | . logic_expr
   39 logic_expr: . logic_expr LAND ulogic_expr
   40           | . logic_expr LOR ulogic_expr
   41           | . ulogic_expr
   42 ulogic_expr: . LNOT ulogic_expr
   43            | . rel_expr
   44 rel_expr: . term_expr EQUAL rel_expr
   45         | . term_expr NEQUAL rel_expr
   46         | . term_expr LESS rel_expr
   47         | . term_expr GREATER rel_expr
   48         | . term_expr LESSEQ rel_expr
   49         | . term_expr GREATEREQ rel_expr
   50         | . term_expr
   51 term_expr: . term_expr PLUS factor_expr
   52          | . term_expr MINUS factor_expr
   53          | . factor_expr
   54 factor_expr: . factor_expr STAR power_expr
   55            | . factor_expr SLASH power_expr
   56            | . factor_expr PERCENT power_expr
   57            | . power_expr
   58 power_expr: . tbang_expr DSTAR power_expr
   59           | . tbang_expr
   60 tbang_expr: . binary_expr TBANG tbang_expr
   61           | . binary_expr
   62 binary_expr: . binary_expr BAND binary_expr
   63            | . binary_expr BOR binary_expr
   64            | . binary_expr BXOR binary_expr
   65            | . binary_expr LSHIFT binary_expr
   66            | . binary_expr RSHIFT binary_expr
   67            | . ubinary_expr
   68 ubinary_expr: . BNOT ubinary_expr
   69             | . ulen_expr
   70 ulen_expr: . POUND ulen_expr
   71          | . call_expr
   72 call_expr: . call_expr LPAREN expr_list RPAREN
   73          | . call_expr COLON IDENT LPAREN expr_list RPAREN
   74          | . funcdecl_expr
   75 funcdecl_expr: . FUNC IDENT any_lparen param_list RPAREN maybe_anno stmt_list END
   76              | . FUNC any_lparen param_list RPAREN maybe_anno stmt_list END
   77              | . MACRO IDENT any_lparen param_list RPAREN maybe_anno stmt_list END
   78              | . MACRO any_lparen param_list RPAREN maybe_anno stmt_list END
   79              | . LAMBDA any_lparen param_list RPAREN maybe_anno expr END
   80              | . index_expr
   81 index_expr: . expr LBRACKET expr RBRACKET
   82           | . expr DOT IDENT
   83           | . ref_expr
   84 ex_index_expr: . expr LBRACKET expr RBRACKET
   85              | . expr DOT IDENT
   86 ref_expr: . IDENT
   87         | . lit_expr
   88 lit_expr: . INT
   89         | . MINUS INT
   90         | . FLOAT
   91         | . STRING
   92         | . NONE
   93         | . gen_expr
   94 gen_expr: . LBRACKET expr_list RBRACKET
   95         | . LBRACE assoc_list RBRACE
   96         | . paren_expr
   97 paren_expr: . any_lparen expr RPAREN
  113 any_lparen: . LPAREN
  114           | . BLPAREN

    IF        shift, and go to state 4
    WHILE     shift, and go to state 5
    FOR       shift, and go to state 6
    FUNC      shift, and go to state 7
    MACRO     shift, and go to state 8
    LAMBDA    shift, and go to state 9
    NONE      shift, and go to state 13
    IDENT     shift, and go to state 14
    INT       shift, and go to state 15
    FLOAT     shift, and go to state 16
    STRING    shift, and go to state 17
    MINUS     shift, and go to state 18
    BNOT      shift, and go to state 19
    LNOT      shift, and go to state 20
    LBRACE    shift, and go to state 21
    BLPAREN   shift, and go to state 22
    LPAREN    shift, and go to state 23
    LBRACKET  shift, and go to state 24
    POUND     shift, and go to state 25

    expr           go to state 49
    control_expr   go to state 28
    assign_expr    go to state 29
    logic_expr     go to state 30
    ulogic_expr    go to state 31
    rel_expr       go to state 32
    term_expr      go to state 33
    factor_expr    go to state 34
    power_expr     go to state 35
    tbang_expr     go to state 36
    binary_expr    go to state 37
    ubinary_expr   go to state 38
    ulen_expr      go to state 39
    call_expr      go to state 40
    funcdecl_expr  go to state 41
    index_expr     go to state 42
    ex_index_expr  go to state 43
    ref_expr       go to state 44
    lit_expr       go to state 45
    gen_expr       go to state 46
    paren_expr     go to state 47
    any_lparen     go to state 48


State 5

   12 expr: . control_expr
   13 control_expr: . IF expr THEN stmt_list if_termin
   14             | . WHILE expr DO stmt_list END
   14             | WHILE . expr DO stmt_list END
   15             | . FOR IDENT IN expr DO stmt_list END
   16             | . assign_expr
   20 assign_expr: . IDENT ASSIGN expr
   21            | . IDENT ASSIGNPLUS expr
   22            | . IDENT ASSIGNMINUS expr
   23            | . IDENT ASSIGNSTAR expr
   24            | . IDENT ASSIGNSLASH expr
   25            | . IDENT ASSIGNDSTAR expr
   26            | . IDENT ASSIGNBAND expr
   27            | . IDENT ASSIGNBOR expr
   28            | . IDENT ASSIGNBXOR expr
   29            | . ex_index_expr ASSIGN expr
   30            | . ex_index_expr ASSIGNPLUS expr
   31            | . ex_index_expr ASSIGNMINUS expr
   32            | . ex_index_expr ASSIGNSTAR expr
   33            | . ex_index_expr ASSIGNSLASH expr
   34            | . ex_index_expr ASSIGNDSTAR expr
   35            | . ex_index_expr ASSIGNBAND expr
   36            | . ex_index_expr ASSIGNBOR expr
   37            | . ex_index_expr ASSIGNBXOR expr
   38            | . logic_expr
   39 logic_expr: . logic_expr LAND ulogic_expr
   40           | . logic_expr LOR ulogic_expr
   41           | . ulogic_expr
   42 ulogic_expr: . LNOT ulogic_expr
   43            | . rel_expr
   44 rel_expr: . term_expr EQUAL rel_expr
   45         | . term_expr NEQUAL rel_expr
   46         | . term_expr LESS rel_expr
   47         | . term_expr GREATER rel_expr
   48         | . term_expr LESSEQ rel_expr
   49         | . term_expr GREATEREQ rel_expr
   50         | . term_expr
   51 term_expr: . term_expr PLUS factor_expr
   52          | . term_expr MINUS factor_expr
   53          | . factor_expr
   54 factor_expr: . factor_expr STAR power_expr
   55            | . factor_expr SLASH power_expr
   56            | . factor_expr PERCENT power_expr
   57            | . power_expr
   58 power_expr: . tbang_expr DSTAR power_expr
   59           | . tbang_expr
   60 tbang_expr: . binary_expr TBANG tbang_expr
   61           | . binary_expr
   62 binary_expr: . binary_expr BAND binary_expr
   63            | . binary_expr BOR binary_expr
   64            | . binary_expr BXOR binary_expr
   65            | . binary_expr LSHIFT binary_expr
   66            | . binary_expr RSHIFT binary_expr
   67            | . ubinary_expr
   68 ubinary_expr: . BNOT ubinary_expr
   69             | . ulen_expr
   70 ulen_expr: . POUND ulen_expr
   71          | . call_expr
   72 call_expr: . call_expr LPAREN expr_list RPAREN
   73          | . call_expr COLON IDENT LPAREN expr_list RPAREN
   74          | . funcdecl_expr
   75 funcdecl_expr: . FUNC IDENT any_lparen param_list RPAREN maybe_anno stmt_list END
   76              | . FUNC any_lparen param_list RPAREN maybe_anno stmt_list END
   77              | . MACRO IDENT any_lparen param_list RPAREN maybe_anno stmt_list END
   78              | . MACRO any_lparen param_list RPAREN maybe_anno stmt_list END
   79              | . LAMBDA any_lparen param_list RPAREN maybe_anno expr END
   80              | . index_expr
   81 index_expr: . expr LBRACKET expr RBRACKET
   82           | . expr DOT IDENT
   83           | . ref_expr
   84 ex_index_expr: . expr LBRACKET expr RBRACKET
   85              | . expr DOT IDENT
   86 ref_expr: . IDENT
   87         | . lit_expr
   88 lit_expr: . INT
   89         | . MINUS INT
   90         | . FLOAT
   91         | . STRING
   92         | . NONE
   93         | . gen_expr
   94 gen_expr: . LBRACKET expr_list RBRACKET
   95         | . LBRACE assoc_list RBRACE
   96         | . paren_expr
   97 paren_expr: . any_lparen expr RPAREN
  113 any_lparen: . LPAREN
  114           | . BLPAREN

    IF        shift, and go to state 4
    WHILE     shift, and go to state 5
    FOR       shift, and go to state 6
    FUNC      shift, and go to state 7
    MACRO     shift, and go to state 8
    LAMBDA    shift, and go to state 9
    NONE      shift, and go to state 13
    IDENT     shift, and go to state 14
    INT       shift, and go to state 15
    FLOAT     shift, and go to state 16
    STRING    shift, and go to state 17
    MINUS     shift, and go to state 18
    BNOT      shift, and go to state 19
    LNOT      shift, and go to state 20
    LBRACE    shift, and go to state 21
    BLPAREN   shift, and go to state 22
    LPAREN    shift, and go to state 23
    LBRACKET  shift, and go to state 24
    POUND     shift, and go to state 25

    expr           go to state 50
    control_expr   go to state 28
    assign_expr    go to state 29
    logic_expr     go to state 30
    ulogic_expr    go to state 31
    rel_expr       go to state 32
    term_expr      go to state 33
    factor_expr    go to state 34
    power_expr     go to state 35
    tbang_expr     go to state 36
    binary_expr    go to state 37
    ubinary_expr   go to state 38
    ulen_expr      go to state 39
    call_expr      go to state 40
    funcdecl_expr  go to state 41
    index_expr     go to state 42
    ex_index_expr  go to state 43
    ref_expr       go to state 44
    lit_expr       go to state 45
    gen_expr       go to state 46
    paren_expr     go to state 47
    any_lparen     go to state 48


State 6

   15 control_expr: FOR . IDENT IN expr DO stmt_list END

    IDENT  shift, and go to state 51


State 7

   75 funcdecl_expr: FUNC . IDENT any_lparen param_list RPAREN maybe_anno stmt_list END
   76              | FUNC . any_lparen param_list RPAREN maybe_anno stmt_list END
  113 any_lparen: . LPAREN
  114           | . BLPAREN

    IDENT    shift, and go to state 52
    BLPAREN  shift, and go to state 22
    LPAREN   shift, and go to state 23

    any_lparen  go to state 53


State 8

   77 funcdecl_expr: MACRO . IDENT any_lparen param_list RPAREN maybe_anno stmt_list END
   78              | MACRO . any_lparen param_list RPAREN maybe_anno stmt_list END
  113 any_lparen: . LPAREN
  114           | . BLPAREN

    IDENT    shift, and go to state 54
    BLPAREN  shift, and go to state 22
    LPAREN   shift, and go to state 23

    any_lparen  go to state 55


State 9

   79 funcdecl_expr: LAMBDA . any_lparen param_list RPAREN maybe_anno expr END
  113 any_lparen: . LPAREN
  114           | . BLPAREN

    BLPAREN  shift, and go to state 22
    LPAREN   shift, and go to state 23

    any_lparen  go to state 56


State 10
